Optimize CLI action reporting and execution